[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flask-storage"
authors = [{name = "Etalab", email = "etalab@data.gouv.fr"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "Flask>=2.1.2",
    "flask-mongoengine>=1.0.0",
    "Pillow>=9.2.0",
    "boto3>=1.26.102",
    "markupsafe>=2.1.2",
    "werkzeug==2.2.3"
]

[project.optional-dependencies]
dev = [
    "flake8==4.0.1",
    "flit==3.6.0"
]
test = [
    "pytest==8.3.5",
    "factory-boy==3.3.3",
    "faker==37.1.0",
    "pytest-flask==1.3.0",
    "pytest-sugar==1.0.0",
    "pytest-mock==3.14.0",
]

[project.urls]
Home = "https://github.com/etalab/flask-storage"

[project.entry-points.'storage.backend']
local = "flask_storage.backends.local:LocalBackend"
s3 = "flask_storage.backends.s3:S3Backend"
mock = "flask_storage.backends.mock:MockBackend"

[tool.flit.module]
name = "flask_storage"

[tool.flit.sdist]
exclude = ["reports/"]
