[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flask-storage"
authors = [{ name = "Etalab", email = "etalab@data.gouv.fr" }]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.11"
dependencies = [
    "Flask ~= 2.1",
    "Pillow >= 9.2, < 12",
    "boto3 ~= 1.26",
    "markupsafe ~= 2.1",
    "mongoengine ~= 0.29.1",
    "werkzeug ~= 2.2.3",
]

[project.optional-dependencies]
dev = ["flake8 ~= 4.0", "flit ~= 3.6"]
test = [
    "pytest ~= 7.1",
    "pytest-faker ~= 2.0",
    "pytest-flask ~= 1.2",
    "pytest-sugar ~= 0.9",
    "pytest-mock ~= 3.8",
]

[project.urls]
Home = "https://github.com/etalab/flask-storage"

[project.entry-points.'storage.backend']
local = "flask_storage.backends.local:LocalBackend"
s3 = "flask_storage.backends.s3:S3Backend"
mock = "flask_storage.backends.mock:MockBackend"

[tool.flit.module]
name = "flask_storage"

[tool.flit.sdist]
exclude = ["reports/"]
